<resources>
    <string name="app_name">Quiz App</string>

    <string name="question1">1 - Who was the author of the famous storybook \'Alice\'s Adventures in Wonderland\'?</string>
    <string name="question2">2 - How many lines does a sonnet have?</string>
    <string name="question3">3 - Who wrote \'Where ignorance is bliss, it is folly to be wise\'?</string>
    <string name="question4">4 - Name the book which opens with the line \'All children, except one grew up\'?</string>
    <string name="question5">5 - In which century were Geoffrey Chaucer\'s Canterbury Tales written?</string>
    <string name="question6">6 - Which were the Bronte sisters?</string>
    <string name="question7">7 - In the book \'The Lord of the Rings\', who or what is Bilbo?</string>

    <string name="q1opt1">Rudyard Kipling</string>
    <string name="q1opt2">John Keats</string>
    <string name="q1opt3">Lewis Carroll</string>

    <string name="q3opt1">Browning</string>
    <string name="q3opt2">Marx</string>
    <string name="q3opt3">Shakespeare</string>

    <string name="q5opt1">14th</string>
    <string name="q5opt2">15th</string>
    <string name="q5opt3">16th</string>

    <string name="q6opt1">Emily</string>
    <string name="q6opt2">Charlotte</string>
    <string name="q6opt3">Anne</string>
    <string name="q6opt4">Jane</string>

    <string name="submit">Submit</string>

</resources>
