<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            style="@style/LinearQAGroup" >

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/question1" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/q1opt1_radio_button"
                    style="@style/RadioStyle"
                    android:text="@string/q1opt1"/>
                <RadioButton
                    android:id="@+id/q1opt2_radio_button"
                    style="@style/RadioStyle"
                    android:text="@string/q1opt2"/>
                <RadioButton
                    android:id="@+id/q1opt3_radio_button"
                    style="@style/RadioStyle"
                    android:text="@string/q1opt3"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/LinearQAGroup" >

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/question2" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearQAGroup" >

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/question3" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearQAGroup" >

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/question4" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearQAGroup" >

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/question5" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearQAGroup" >

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/question6" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearQAGroup" >

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/question7" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearQAGroup" >

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/question8" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

